fix misalignments

--- a/packages/core/src/sass/app/modules/reset-password.scss
+++ b/packages/core/src/sass/app/modules/reset-password.scss
@@ -72,7 +72,7 @@
         }
     }
     &__error {
-        width: 38.4rem;
+        max-width: 38.4rem;
         min-height: 28.4rem;
         padding-top: 2rem;
         text-align: center;
